--- a/index.html
+++ b/index.html
@@ -37,34 +37,34 @@
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
-                        <a href="#">For you</a>
+                        <a href="https://Wordplease.com/category/Foryou">For you</a>
                     </li>
                     <li class="">
-                        <a href="#">Sports</a>
+                        <a href="https://Wordplease.com/category/Sports">Sports</a>
                     </li>
                     <li class="">
-                        <a href="#">Technology</a>
+                        <a href="https://Wordplease.com/category/Technology">Technology</a>
                     </li>
                     <li class="hidden-sm">
-                        <a href="#">Development</a>
+                        <a href="https://Wordplease.com/category/Development">Development</a>
                     </li>
                     <li class="hidden-xs hidden-sm">
-                        <a href="#">Star Wars</a>
+                        <a href="https://Wordplease.com/category/StarWars">Star Wars</a>
                     </li>
                     <li class="hidden-xs hidden-sm hidden-md">
-                        <a href="#">Arts</a>
+                        <a href="https://Wordplease.com/category/Arts">Arts</a>
                     </li>
                     <li class="hidden-xs hidden-sm hidden-md">
-                        <a href="#">Economy</a>
+                        <a href="https://Wordplease.com/category/Economy">Economy</a>
                     </li>
                     <li class="hidden-xs hidden-sm hidden-md">
-                        <a href="#">Humor</a>
+                        <a href="https://Wordplease.com/category/Humor">Humor</a>
                     </li>
                     <li>
-                        <a href="#">More</a>
+                        <a href="https://Wordplease.com/category/More">More</a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://Wordplease.com/Sigin">
                             <span class="fa fa-user"></span> Sign in
                         </a>
                     </li>
@@ -143,7 +143,7 @@
                         </header>
                         <div class="body">
                             <p>Roberts, whose pivotal steal started the <strong>Red Sox’</strong> rally over the <em>Yankees</em>
-                                in the 2004 A.L.C.S., visits the <a href="#">Bronx</a> this week as manager of the
+                                in the 2004 A.L.C.S., visits the <a href="http://newyork.yankees.mlb.com/nyy/ballpark/">Bronx</a> this week as manager of the
                                 Dodgers.</p>
                             <p>Still, Roberts parlayed a strong spring into a spot as the Dodgers’ opening-day center
                                 fielder and leadoff hitter.</p>
@@ -178,7 +178,7 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="Used Coffee Grounds Can Clean Contaminated Water ">
-                                        <h1 class="title">Used Coffee Grounds Can Clean Contaminated Water </h1>
+                                        <h2 class="title">Used Coffee Grounds Can Clean Contaminated Water </h2>
                                     </a>
                                 </div>
                             </div>
@@ -251,8 +251,8 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="Let’s Dance: ‘Swan Lake,’ ‘Fire or Ice,’ ‘Ailey II’ This Fall">
-                                        <h1 class="title">Let’s Dance: ‘Swan Lake,’ ‘Fire or Ice,’ ‘Ailey II’ This
-                                            Fall</h1>
+                                        <h2 class="title">Let’s Dance: ‘Swan Lake,’ ‘Fire or Ice,’ ‘Ailey II’ This
+                                            Fall</h2>
                                     </a>
                                 </div>
                             </div>
@@ -333,7 +333,7 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="Runnable wants to make developers more productive">
-                                        <h1 class="title">Runnable wants to make developers more productive</h1>
+                                        <h2 class="title">Runnable wants to make developers more productive</h2>
                                     </a>
                                 </div>
                             </div>
@@ -411,7 +411,7 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="Discounts Spur More People to Eat Fruit, Veggies">
-                                        <h1 class="title">Discounts Spur More People to Eat Fruit, Veggies</h1>
+                                        <h2 class="title">Discounts Spur More People to Eat Fruit, Veggies</h2>
                                     </a>
                                 </div>
                             </div>
@@ -487,8 +487,8 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="Urban culture class lets Mercer students learn from a professional graffiti artist">
-                                        <h1 class="title">Urban culture class lets Mercer students learn from a
-                                            professional graffiti artist</h1>
+                                        <h2 class="title">Urban culture class lets Mercer students learn from a
+                                            professional graffiti artist</h2>
                                     </a>
                                 </div>
                             </div>
@@ -561,8 +561,8 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="What Gives With So Many Hard Scientists Being Hard-Core Endurance Runners?">
-                                        <h1 class="title">What Gives With So Many Hard Scientists Being Hard-Core
-                                            Endurance Runners?</h1>
+                                        <h2 class="title">What Gives With So Many Hard Scientists Being Hard-Core
+                                            Endurance Runners?</h2>
                                     </a>
                                 </div>
                             </div>
@@ -640,8 +640,8 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="Machine-stitched: How online personal shoppers are beginning to offer in-store style experiences">
-                                        <h1 class="title">Machine-stitched: How online personal shoppers are beginning
-                                            to offer in-store style experiences</h1>
+                                        <h2 class="title">Machine-stitched: How online personal shoppers are beginning
+                                            to offer in-store style experiences</h2>
                                     </a>
                                 </div>
                             </div>
@@ -707,7 +707,7 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="Barrie Film Festival wraps up outdoor screenings with Star Wars flick">
-                                        <h1 class="title">Barrie Film Festival wraps up outdoor screenings with Star Wars flick</h1>
+                                        <h2 class="title">Barrie Film Festival wraps up outdoor screenings with Star Wars flick</h2>
                                     </a>
                                 </div>
                             </div>
@@ -767,7 +767,7 @@
                                 <div class="col-xs-12">
                                     <a href="detail.html"
                                        title="Star Wars: Rogue One - Disney not expecting Force Awakens' box office">
-                                        <h1 class="title">Star Wars: Rogue One - Disney not expecting Force Awakens' box office</h1>
+                                        <h2 class="title">Star Wars: Rogue One - Disney not expecting Force Awakens' box office</h2>
                                     </a>
                                 </div>
                             </div>
@@ -820,13 +820,13 @@
             <div class="col-xs-12">
                 <ul class="pager">
                     <li class="previous">
-                        <a href="#">
+                        <a href="?prev=1">
                             <span class="fa fa-arrow-left"></span>
                             Previous posts
                         </a>
                     </li>
                     <li class="next">
-                        <a href="#">
+                        <a href="?next=2">
                             Next posts
                             <span class="fa fa-arrow-right"></span>
                         </a>
