anchor title and target

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </header>
                         <div class="body">
                             <p>Roberts, whose pivotal steal started the <strong>Red Sox’</strong> rally over the <em>Yankees</em>
-                                in the 2004 A.L.C.S., visits the <a href="http://newyork.yankees.mlb.com/nyy/ballpark/">Bronx</a> this week as manager of the
+                                in the 2004 A.L.C.S., visits the <a href="http://newyork.yankees.mlb.com/nyy/ballpark/" title="Yankees stadium" target="_blank">Bronx</a> this week as manager of the
                                 Dodgers.</p>
                             <p>Still, Roberts parlayed a strong spring into a spot as the Dodgers’ opening-day center
                                 fielder and leadoff hitter.</p>
