--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="canonical" href="https://Wordplease.com/index.html">
     <link rel="index" href="https://Wordplease.com/" title="Wordplease Stunning posts">
 
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@kajota93">
+    <meta name="twitter:title" content="Stunning posts from all around the world | Wordplease">
+    <meta name="twitter:description" content="shares stories of whatever. Feel free to write and discover new trends, news or articles">
+    <meta name="twitter:creator" content="@kajota93">
+    <!-- Twitter Summary card images must be at least 120x120px -->
+    <meta name="twitter:image" content="https://Wordplease.com/dist/img/contents/shop-md.jpg">
+
     <link rel="stylesheet" type="text/css" href="dist/css/style.css">
 </head>
 
